--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -91,19 +91,20 @@ section[role="main"] ul {
 /////////////////////////////////////////
 
 section[role="main"] {
-	margin: $triple-spacing auto 3em;
+	margin: $quad-spacing auto 3em;
 	width: 42em; 
 }
 
 .logo {
   display: block;
   margin: 0 auto;
+  width: 70%;
 }
 
 #sso {
 	background: $body-background-color;
 	box-shadow: 0 1px 1px #347bad;
-	margin: $double-spacing auto 0;
+	margin: $quad-spacing auto 0;
 	width: 36em;
 	padding: 0 4em 1em;
 	overflow: hidden;
@@ -170,12 +171,6 @@ section[role="main"] {
 	}
 }
 
-.loading i {
-	margin: $default-spacing auto 0;
-	font-size: $h1-font-size * 2;
-	margin: $default-spacing 45%;
-}
-
 .error ~ #sso, .alert ~ #sso, .error ~ article, .alert ~ article {
 	margin-top: -$default-spacing;
 }
@@ -211,6 +206,12 @@ article {
 	margin: 0 auto;
 	width: 36em;
 	padding: 1em;
+}
+
+.loading i {
+	margin: $default-spacing auto 0;
+	font-size: $h1-font-size * 2;
+	margin: $default-spacing 45%;
 }
 
 footer[role="contentinfo"] {
