--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -365,7 +365,7 @@ button[disabled] {
 
 /* line 5, ../_scss/_sso-styles.scss */
 html {
-  background: #d1e8f8 url("../images/background.jpg");
+  background: #d1e8f8 url("../images/skyline.jpg");
   box-sizing: border-box;
   position: relative;
   min-height: 100%;
@@ -654,33 +654,34 @@ footer[role="contentinfo"] {
   bottom: 0;
   height: 2em;
   width: 100%;
-  background: #0055a6;
+  background: #000;
+  opacity: .6;
   border-top: 1px solid #002140;
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 226, ../_scss/_sso-styles.scss */
+/* line 227, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] p {
   width: 48em;
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 231, ../_scss/_sso-styles.scss */
+/* line 232, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 234, ../_scss/_sso-styles.scss */
+/* line 235, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 237, ../_scss/_sso-styles.scss */
+/* line 238, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 244, ../_scss/_sso-styles.scss */
+/* line 245, ../_scss/_sso-styles.scss */
 .non-human {
   float: right;
 }
