--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -654,34 +654,33 @@ footer[role="contentinfo"] {
   bottom: 0;
   height: 2em;
   width: 100%;
-  background: #000;
-  opacity: .6;
-  border-top: 1px solid #002140;
+  background: rgba(0, 0, 0, 0.75);
+  border-top: 1px solid #0055a6;
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 227, ../_scss/_sso-styles.scss */
+/* line 226, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] p {
   width: 48em;
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 232, ../_scss/_sso-styles.scss */
+/* line 231, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 235, ../_scss/_sso-styles.scss */
+/* line 234, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 238, ../_scss/_sso-styles.scss */
+/* line 237, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 245, ../_scss/_sso-styles.scss */
+/* line 244, ../_scss/_sso-styles.scss */
 .non-human {
   float: right;
 }
