--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -162,7 +162,7 @@ optgroup {
   font-weight: bold;
 }
 
-/* line 77, ../_scss/_ucla-vars.scss */
+/* line 79, ../_scss/_ucla-vars.scss */
 body {
   font-size: 100%;
 }
@@ -181,7 +181,7 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-/* line 77, ../_scss/_ucla-vars.scss */
+/* line 79, ../_scss/_ucla-vars.scss */
 body {
   font-size: 100%;
 }
@@ -215,7 +215,7 @@ select, input, textarea {
   padding: 0.5em 0.6em;
   display: inline-block;
   border: 1px solid #ccc;
-  box-shadow: inset 0 1px 3px #ddd;
+  box-shadow: inset 0 1px 3px #dedede;
   border-radius: 3px;
 }
 
@@ -489,7 +489,7 @@ section[role="main"] {
 #sso {
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
-  margin: 4em auto 0;
+  margin: 0 auto;
   width: 36em;
   padding: 0 4em 1em;
   overflow: hidden;
@@ -513,22 +513,6 @@ section[role="main"] {
 }
 
 /* line 126, ../_scss/_sso-styles.scss */
-#report {
-  overflow: hidden;
-}
-/* line 128, ../_scss/_sso-styles.scss */
-#report label {
-  display: block;
-  margin-bottom: 0.25em;
-}
-/* line 132, ../_scss/_sso-styles.scss */
-#report ol {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
-}
-
-/* line 139, ../_scss/_sso-styles.scss */
 .sso-submit {
   width: 100%;
   float: right;
@@ -538,7 +522,7 @@ section[role="main"] {
   padding-top: 0;
 }
 @media (min-width: 321px) {
-  /* line 139, ../_scss/_sso-styles.scss */
+  /* line 126, ../_scss/_sso-styles.scss */
   .sso-submit {
     width: 23.25581%;
     float: left;
@@ -548,7 +532,7 @@ section[role="main"] {
   }
 }
 
-/* line 147, ../_scss/_sso-styles.scss */
+/* line 134, ../_scss/_sso-styles.scss */
 .sso-links {
   width: 100%;
   float: right;
@@ -558,10 +542,10 @@ section[role="main"] {
   overflow: hidden;
   *zoom: 1;
   font-size: 0.75em;
-  margin: 0;
+  margin: .25em;
 }
 @media (min-width: 321px) {
-  /* line 147, ../_scss/_sso-styles.scss */
+  /* line 134, ../_scss/_sso-styles.scss */
   .sso-links {
     width: 74.4186%;
     float: right;
@@ -570,14 +554,14 @@ section[role="main"] {
     clear: none;
   }
 }
-/* line 155, ../_scss/_sso-styles.scss */
+/* line 142, ../_scss/_sso-styles.scss */
 .sso-links li {
   margin-bottom: 0;
 }
 
-/* line 160, ../_scss/_sso-styles.scss */
+/* line 147, ../_scss/_sso-styles.scss */
 .sp-news {
-  background: rgba(204, 204, 204, 0.15);
+  background: rgba(204, 204, 204, 0.4);
   padding: 0.5em;
   width: 36em;
   margin: 1em auto 0;
@@ -585,22 +569,60 @@ section[role="main"] {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 166, ../_scss/_sso-styles.scss */
+/* line 153, ../_scss/_sso-styles.scss */
 .sp-news p {
   font-size: 0.75em;
 }
-/* line 169, ../_scss/_sso-styles.scss */
+/* line 156, ../_scss/_sso-styles.scss */
 .sp-news h3 {
   font-size: 1em;
   margin-top: 0;
 }
 
-/* line 175, ../_scss/_sso-styles.scss */
+/* line 162, ../_scss/_sso-styles.scss */
 .error ~ #sso, .alert ~ #sso, .error ~ article, .alert ~ article {
   margin-top: -1em;
 }
 
-/* line 179, ../_scss/_sso-styles.scss */
+/* line 166, ../_scss/_sso-styles.scss */
+.badge {
+  width: 8em;
+  height: 4em;
+  background: #ffff00;
+  position: relative;
+}
+/* line 171, ../_scss/_sso-styles.scss */
+.badge:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -1em;
+  width: 0;
+  height: 0;
+  border-top: 2em solid transparent;
+  border-right: 1em solid #ffff00;
+  border-bottom: 2em solid transparent;
+}
+/* line 182, ../_scss/_sso-styles.scss */
+.badge:after {
+  content: "";
+  position: absolute;
+  right: -1em;
+  width: 0;
+  height: 0;
+  border-top: 2em solid transparent;
+  border-left: 1em solid #ffff00;
+  border-bottom: 2em solid transparent;
+}
+/* line 192, ../_scss/_sso-styles.scss */
+.badge span {
+  font-size: 2em;
+  color: #0055a6;
+  line-height: 2em;
+  padding-left: .7em;
+}
+
+/* line 200, ../_scss/_sso-styles.scss */
 .error {
   width: 40em;
   background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
@@ -611,12 +633,12 @@ section[role="main"] {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 186, ../_scss/_sso-styles.scss */
+/* line 207, ../_scss/_sso-styles.scss */
 .error h1 {
   color: #ff00a5;
 }
 
-/* line 191, ../_scss/_sso-styles.scss */
+/* line 212, ../_scss/_sso-styles.scss */
 .alert {
   width: 40em;
   background: #ffff00;
@@ -627,12 +649,12 @@ section[role="main"] {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 198, ../_scss/_sso-styles.scss */
+/* line 219, ../_scss/_sso-styles.scss */
 .alert h1 {
   color: #0055a6;
 }
 
-/* line 203, ../_scss/_sso-styles.scss */
+/* line 224, ../_scss/_sso-styles.scss */
 article {
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
@@ -641,14 +663,30 @@ article {
   padding: 1em;
 }
 
-/* line 211, ../_scss/_sso-styles.scss */
+/* line 232, ../_scss/_sso-styles.scss */
+#report {
+  overflow: hidden;
+}
+/* line 234, ../_scss/_sso-styles.scss */
+#report label {
+  display: block;
+  margin-bottom: 0.25em;
+}
+/* line 238, ../_scss/_sso-styles.scss */
+#report ol {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+/* line 245, ../_scss/_sso-styles.scss */
 .loading i {
   margin: 1em auto 0;
   font-size: 4em;
   margin: 1em 45%;
 }
 
-/* line 217, ../_scss/_sso-styles.scss */
+/* line 251, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] {
   position: absolute;
   bottom: 0;
@@ -659,28 +697,28 @@ footer[role="contentinfo"] {
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 226, ../_scss/_sso-styles.scss */
+/* line 260, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] p {
   width: 48em;
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 231, ../_scss/_sso-styles.scss */
+/* line 265, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 234, ../_scss/_sso-styles.scss */
+/* line 268, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 237, ../_scss/_sso-styles.scss */
+/* line 271, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 244, ../_scss/_sso-styles.scss */
+/* line 278, ../_scss/_sso-styles.scss */
 .non-human {
   float: right;
 }
