--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -1,5 +1,5 @@
 <footer role="contentinfo">
-	<p class="footer-meta-info"><a href="policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: {{ site.time }} <a href="/." class="non-human">NH</a></p>
+	<p class="footer-meta-info"><a href="{{ site.baseurl }}/cms-policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: {{ site.time }} <a href="/." class="non-human">NH</a></p>
 </footer>
 
 <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
