--- a/_scss/_forms.scss
+++ b/_scss/_forms.scss
@@ -13,7 +13,7 @@ select, input, textarea {
 	padding: 0.5em 0.6em;
 	display: inline-block;
 	border: 1px solid $neutral;
-	box-shadow: inset 0 1px 3px #ddd;
+	box-shadow: inset 0 1px 3px lighten($neutral, 7%);
 	border-radius: $global-border-radius;
 }
 
