--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -162,7 +162,7 @@ optgroup {
   font-weight: bold;
 }
 
-/* line 79, ../_scss/_ucla-vars.scss */
+/* line 78, ../_scss/_ucla-vars.scss */
 body {
   font-size: 100%;
 }
@@ -181,7 +181,7 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-/* line 79, ../_scss/_ucla-vars.scss */
+/* line 78, ../_scss/_ucla-vars.scss */
 body {
   font-size: 100%;
 }
@@ -474,7 +474,7 @@ section[role="main"] ul li:before {
 
 /* line 94, ../_scss/_sso-styles.scss */
 section[role="main"] {
-  margin: 8em auto 3em;
+  margin: 6em auto 3em;
   width: 42em;
 }
 
@@ -592,113 +592,115 @@ article {
   margin: 0 auto;
   width: 36em;
   padding: 1em;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
 
-/* line 175, ../_scss/_sso-styles.scss */
+/* line 176, ../_scss/_sso-styles.scss */
 .badge-alert {
   position: absolute;
   top: -1em;
   right: -4em;
-  width: 8em;
-  height: 4em;
+  width: 6.25em;
+  height: 5em;
   background: #ffff00;
 }
-/* line 182, ../_scss/_sso-styles.scss */
+/* line 9, ../_scss/_mixins.scss */
 .badge-alert:before {
   content: "";
   position: absolute;
   top: 0;
-  left: -1em;
+  left: -1.25em;
   width: 0;
   height: 0;
-  border-top: 2em solid transparent;
-  border-right: 1em solid #ffff00;
-  border-bottom: 2em solid transparent;
+  border-top: 2.5em solid transparent;
+  border-right: 1.25em solid #ffff00;
+  border-bottom: 2.5em solid transparent;
 }
-/* line 193, ../_scss/_sso-styles.scss */
+/* line 20, ../_scss/_mixins.scss */
 .badge-alert:after {
   content: "";
   position: absolute;
-  right: -1em;
+  right: -1.25em;
   width: 0;
   height: 0;
-  border-top: 2em solid transparent;
-  border-left: 1em solid #ffff00;
-  border-bottom: 2em solid transparent;
+  border-top: 2.5em solid transparent;
+  border-left: 1.25em solid #ffff00;
+  border-bottom: 2.5em solid transparent;
 }
-/* line 203, ../_scss/_sso-styles.scss */
-.badge-alert span {
-  font-size: 2em;
+/* line 30, ../_scss/_mixins.scss */
+.badge-alert i {
+  font-size: 4.25em;
   color: #0055a6;
-  line-height: 2em;
-  padding-left: .7em;
+  line-height: 1.25em;
+  padding-left: 0.25em;
 }
 
-/* line 211, ../_scss/_sso-styles.scss */
+/* line 180, ../_scss/_sso-styles.scss */
 .badge-error {
   position: absolute;
   top: -1em;
   right: -4em;
-  width: 8em;
-  height: 4em;
-  background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
-  color: #ff00a5;
+  width: 6.25em;
+  height: 5em;
+  background: #240017;
 }
-/* line 219, ../_scss/_sso-styles.scss */
+/* line 9, ../_scss/_mixins.scss */
 .badge-error:before {
   content: "";
   position: absolute;
   top: 0;
-  left: -1em;
+  left: -1.25em;
   width: 0;
   height: 0;
-  border-top: 2em solid transparent;
-  border-right: 1em solid #240017;
-  border-bottom: 2em solid transparent;
+  border-top: 2.5em solid transparent;
+  border-right: 1.25em solid #240017;
+  border-bottom: 2.5em solid transparent;
 }
-/* line 230, ../_scss/_sso-styles.scss */
+/* line 20, ../_scss/_mixins.scss */
 .badge-error:after {
   content: "";
   position: absolute;
-  right: -1em;
+  right: -1.25em;
   width: 0;
   height: 0;
-  border-top: 2em solid transparent;
-  border-left: 1em solid #240017;
-  border-bottom: 2em solid transparent;
+  border-top: 2.5em solid transparent;
+  border-left: 1.25em solid #240017;
+  border-bottom: 2.5em solid transparent;
 }
-/* line 240, ../_scss/_sso-styles.scss */
-.badge-error span {
-  font-size: 2em;
+/* line 30, ../_scss/_mixins.scss */
+.badge-error i {
+  font-size: 4.25em;
   color: #ff00a5;
-  line-height: 2em;
-  padding-left: .7em;
+  line-height: 1.25em;
+  padding-left: 0.25em;
 }
 
-/* line 248, ../_scss/_sso-styles.scss */
+/* line 184, ../_scss/_sso-styles.scss */
 #report {
   overflow: hidden;
 }
-/* line 250, ../_scss/_sso-styles.scss */
+/* line 186, ../_scss/_sso-styles.scss */
 #report label {
   display: block;
   margin-bottom: 0.25em;
 }
-/* line 254, ../_scss/_sso-styles.scss */
+/* line 190, ../_scss/_sso-styles.scss */
 #report ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 261, ../_scss/_sso-styles.scss */
+/* line 197, ../_scss/_sso-styles.scss */
 .loading i {
   margin: 1em auto 0;
   font-size: 4em;
   margin: 1em 45%;
 }
 
-/* line 267, ../_scss/_sso-styles.scss */
+/* line 203, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] {
   position: absolute;
   bottom: 0;
@@ -709,28 +711,28 @@ footer[role="contentinfo"] {
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 276, ../_scss/_sso-styles.scss */
+/* line 212, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] p {
   width: 48em;
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 281, ../_scss/_sso-styles.scss */
+/* line 217, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 284, ../_scss/_sso-styles.scss */
+/* line 220, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 287, ../_scss/_sso-styles.scss */
+/* line 223, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 294, ../_scss/_sso-styles.scss */
+/* line 230, ../_scss/_sso-styles.scss */
 .non-human {
   float: right;
 }
