disable sumbit when inputs empty

--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -4,4 +4,4 @@
 
 <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/js/placeholdr.js"></script>
-<script src="{{ site.baseurl }}/js/iamucla-sso.js"></script>
+<script src="{{ site.baseurl }}/js/sso.js"></script>
