--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -11,7 +11,7 @@
 			</li>
 			<li>
 				<label for="pass">Password</label>
-				<input id="pass" name="pass" type="text" placeholder="Your UCLA Logon Password" aria-required="true" required>
+				<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" required>
 			</li>
 		</ol>
 	</fieldset>
